feat: prepare for Railway deployment
- Add Procfile for Railway
- Add railway.json configuration
- Add .env.railway template
- Update package.json scripts
- Update .gitignore for Railway

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,16 @@
 
 .vscode
 
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Keep Railway template
+!.env.railway
+
 # Logs
 logs/**.json
 *.log
